Color contrast fixes for accessibility

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -593,7 +593,7 @@ article.list {
         .nav-item {
             .nav-link {
                 font-size: 12px;
-                color: #9b9b9b;
+                color: $gray-dark;
                 text-transform: uppercase;
                 letter-spacing: 0.1em;
                 padding: 1rem 1.6rem;
@@ -740,21 +740,21 @@ article.list {
 }
 
 .search__input {
-    color: #d5d5d5;
+    color: $body-text;
     font-weight: 500;
     border: 0px;
     padding: 0 0 0 12px;
     &::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-        color: #d5d5d5;
+        color: $gray-dark;
     }
     &::-moz-placeholder { /* Firefox 19+ */
-      color: #d5d5d5;
+      color: $gray-dark;
     }
     &:-ms-input-placeholder { /* IE 10+ */
-      color: #d5d5d5;
+      color: $gray-dark;
     }
     &:-moz-placeholder { /* Firefox 18- */
-      color: #d5d5d5;
+      color: $gray-dark;
     }
 }
 
@@ -1057,6 +1057,32 @@ article.list {
 
 .wire-column__nav {
     background: $nav-sidebar-bg;
+
+    a {
+        color: white;
+    }
+    .tab-pane {
+        .btn-outline-primary {
+            color: white;
+            border-color: $main-blue;
+            background-color: $main-blue;
+        
+            &:hover {
+                color: white;
+                border-color: $mid-blue;
+                background-color: $mid-blue;
+            }
+        }
+        .btn-outline-secondary {
+            color: $gray-light;
+            border-color: $gray-light;
+            
+            &:hover {
+                color: white;
+                border-color: #6D757E;
+            }
+        }
+    }
 }
 
 .wire-column__nav__items {
@@ -1296,13 +1322,16 @@ article.list {
 }
 
 .wire-articles__item--visited {
-    .wire-articles__item-headline,
     .wire-articles__item__text {
-        color: $gray-mid;
+        color: $body-text;
+    }
+    .wire-articles__item-headline {
+        color: $gray-dark;
+        font-weight: 400;
     }
     .wire-articles__item__meta-info,
     .wire-articles__item__meta-info .bold {
-        color: $gray-mid;
+        color: $gray-dark
     }
     .wire-articles__wire-articles__item__metaitem__meta-info .bold {
         font-weight: 500;
@@ -1312,7 +1341,7 @@ article.list {
         filter: grayscale(100%);
     }
     .icon--gray-light {
-        color: #dedede !important;
+        color: #999 !important;
     }
     .wire-articles__item-actions {
         .btn-group {
@@ -1868,6 +1897,7 @@ article.list {
     margin-bottom: 0;
     line-height: 1.3;
     display: flex;
+    color: #212529;
 
     @include sm {
         font-size: 1rem;
@@ -2221,7 +2251,7 @@ article.list {
     font-size: 0.875rem;
     font-weight: 300;
     margin: 10px 0 0;
-    line-height: 1.3;
+    line-height: 1.5;
     display: none;
     @include sm {
         display: block;
@@ -2708,7 +2738,8 @@ a.wire-articles__versions {
         text-decoration: none;
     }
     p {
-        font-size: 0.75rem
+        font-size: 0.75rem;
+        margin: 4px 0;
     }
     i {
         font-size: 16px;
@@ -3169,6 +3200,26 @@ a.wire-articles__versions {
         width: 300px;
         display: block;
         padding: 30px 40px;
+    }
+    .btn-outline-primary {
+        color: white;
+        border-color: $main-blue;
+        background-color: $main-blue;
+    
+        &:hover {
+            color: white;
+            border-color: $mid-blue;
+            background-color: $mid-blue;
+        }
+    }
+    .btn-outline-secondary {
+        color: $gray-light;
+        border-color: $gray-light;
+        
+        &:hover {
+            color: white;
+            border-color: #6D757E;
+        }
     }
 }
 
